# scala-deps-zatp

./: Cargo.toml  README.md  release-local
.github/workflows/: build-linux.yml  build-mac.yml  release-linux.yml  release-mac.yml
src/: error.rs  main.rs
src/args/: cli.rs
tests/: integration.rs
