[package]
name = "scala-deps"
version = "0.6.4"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"]}
serde_json = "1"
clap = { version = "4", features = ["derive"] }
ansi_term = "0.12"
version-compare = "0.1"

[dev-dependencies]
pretty_assertions = "1"
assert_cmd = "2"
dir-diff="0.3"
similar="2"
predicates="3"
